CREATE TABLE users
(
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at    TIMESTAMP WITHOUT TIME ZONE,
    updated_at    TIMESTAMP WITHOUT TIME ZONE,
    username      VARCHAR(255)                            NOT NULL,
    email         VARCHAR(255)                            NOT NULL,
    password_hash VARCHAR(255)                            NOT NULL,
    role          VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

ALTER TABLE users
    ADD CONSTRAINT uk_user_email UNIQUE (email);

ALTER TABLE users
    ADD CONSTRAINT uk_user_username UNIQUE (username);
